[Fix bug 1206684] Fix username privacy selector alignment.

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1965,6 +1965,10 @@ body#edit-profile {
     }
 }
 
+#username-privacy {
+    padding-right: 82px;
+}
+
 .input-file {
     margin-bottom: 15px;
 }
